@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods


class Map {
    name
    size
    scale
}

class Scenario {
}

class Editor {
    username
    password
}

class IndustryChanger{
    effect
}

class TimeRestriction{
    year
}

class PortsBehaviour{
    importation
    exportation
}

class ResourceType{
    value
}


Editor "1" - "*" Map : creates >
Editor "1" - "*" Scenario : creates >
Scenario "*" -- "1" Map : uses >
Scenario "1" -- "1" HistoricalRestriction: includes >
Scenario "1" -- "1" TechnologicalRestriction: includes >
Scenario "1" -- "1" TimeRestriction: includes >
Scenario "1" -- "1" PortsBehaviour: includes >
PortsBehaviour "1" -- "2..*" ResourceType: has >
HistoricalRestriction "1" -- "1..*" IndustryChanger: has >

@enduml
